--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,6 +4,7 @@
     		android:layout_height="fill_parent" >
 
     <TextView	android:id="@+id/textView1"
+        		android:padding="5dp"
         		android:layout_width="match_parent"
         		android:layout_height="wrap_content"/>
 
